--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 *{
     margin: 0;
 }
+header{
+    position: fixed;
+    width: 100%;
 
+}
+.wrap0{
+    border-bottom: 1px solid #ddddddb7;
+    background-color: white;
+}
 .container{
     display: flex;
     justify-content: space-between;
-    margin: 15px 80px 15px 80px;
-    background-color: white;
-    position: relative;
+    margin: 0px 80px 15px 80px;
+    padding-top: 15px;
 }
 .hdleft{
     display: flex;
@@ -106,6 +113,11 @@
     font-size: 15px;
     padding: 8px 0px 8px 0px;
 }
+.wrap1{
+    height: 90px;
+    background-color: white;
+    transition: transform 0.2s ease-out;
+}
 .container2{
     display: flex;
     justify-content: center;
@@ -162,8 +174,8 @@
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(6, minmax(350px, auto));
     margin: 0px 80px 0px 80px;
+    padding-top: 200px;
     gap: 40px 20px;
-
 }
 .content .item{
     display: flex;
